@@ -8,6 +8,7 @@
         * src/Rcpp_init.c: export capabilities (renamed rcpp_capabilities)
         * include/Rcpp/traits/traits.h: master file for all traits includes
         * include/Rcpp/macros/macros.h: master file for all macros includes
+        * include/Rcpp/DataFrame.h: just have declaration for DataFrame
         
 2012-12-09 Romain Francois <romain@r-enthusiasts.com>
 
